# dymMob

./: .gitignoge  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  dymMob-release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/dym/: CMakeLists.txt  config.ini
app/src/main/cpp/dym/src/: Cfg.cpp  Cfg.hpp  Fs.cpp  Fs.hpp  User.cpp  User.hpp  Yt.cpp  Yt.hpp  config.hpp  main.cpp
app/src/main/cpp/dym/src/lib/inih/: INIReader.cpp
app/src/main/java/org/nazarik/dymMob/: ConsoleActivity.java  MainActivity.java
app/src/main/res/drawable/: paste.xml
app/src/main/res/layout/: activity_console.xml  activity_main.xml
app/src/main/res/values/: strings.xml
